Se vinculan Activities con paso de parámetros

--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -80,6 +80,7 @@
       android:fontFamily="sans-serif-condensed"
       android:text="@string/enter"
       android:textSize="20sp"
+      android:onClick="goToMain"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
