--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,9 +70,10 @@
       android:id="@+id/btnLogin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:fontFamily="sans-serif-condensed"
+      android:onClick="goToMain"
       android:text="@string/enter"
       android:textSize="20sp"
-      android:fontFamily="sans-serif-condensed"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
