--- a/app/src/main/res/layout/activity_person_form.xml
+++ b/app/src/main/res/layout/activity_person_form.xml
@@ -226,6 +226,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="guardarFormulario"
                 android:text="@string/save" />
         </LinearLayout>
 
