Se completa listView personalizado

--- a/app/src/main/res/layout/contact_list_row.xml
+++ b/app/src/main/res/layout/contact_list_row.xml
@@ -34,7 +34,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/contact_example"
-                android:textSize="30sp" />
+                android:textStyle="bold"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/tvContactPhone"
