--- a/app/src/main/res/layout/activity_contact_update.xml
+++ b/app/src/main/res/layout/activity_contact_update.xml
@@ -215,6 +215,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginEnd="5dp"
+                android:onClick="eliminarContacto"
                 android:text="@string/delete" />
 
             <Button
