--- a/app/src/main/res/layout/activity_person_form.xml
+++ b/app/src/main/res/layout/activity_person_form.xml
@@ -64,7 +64,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/ivPictureForm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
